--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -29,11 +29,13 @@
   - chmod 700 $XDG_STATE_HOME/zsh
 
 - link:
-    "$XDG_DATA_HOME/zinit": zinit # zinit
-    "$XDG_CONFIG_HOME/vim/vimrc": vim/vimrc # vim
-    "$XDG_CONFIG_HOME/zsh/.zshrc": zsh/zshrc # zsh
+    "$XDG_CONFIG_HOME/fzf/.fzfrc": fzf/.fzfrc # fzf
+    "$XDG_CONFIG_HOME/p10k/.p10krc": p10k/.p10krc # p10k
     "$XDG_CONFIG_HOME/p10k/p10k.zsh": p10k/p10k.zsh # p10k
-    "$HOME/.zshenv": zsh/zshenv # zsh
+    "$XDG_CONFIG_HOME/vim/.vimrc": vim/.vimrc # vim
+    "$XDG_DATA_HOME/zinit/": zinit # zinit
+    "$HOME/.zshenv": zsh/.zshenv # zsh
+    "$XDG_CONFIG_HOME/zsh/.zshrc": zsh/.zshrc # zsh
 
 - shell:
   - test -f "$XDG_CONFIG_HOME/zsh/.zshdiff" || touch "$XDG_CONFIG_HOME/zsh/.zshdiff"
