--- a/install.bin.linux.yaml
+++ b/install.bin.linux.yaml
@@ -44,18 +44,25 @@
 - link:
     ~/.local/bin/bat: binaries/${PLATFORM}/bat/bin/bat # bat
     ~/.local/bin/btop: binaries/${PLATFORM}/btop/bin/btop # btop
+    ~/.local/bin/delta: binaries/${PLATFORM}/delta/bin/delta # delta
     ~/.local/bin/dust: binaries/${PLATFORM}/dust/bin/dust # dust
     ~/.local/bin/eza: binaries/${PLATFORM}/eza/bin/eza # eza
     ~/.local/bin/fastfetch: binaries/${PLATFORM}/fastfetch/bin/fastfetch # fastfetch
     ~/.local/bin/fd: binaries/${PLATFORM}/fd/bin/fd # fd
     ~/.local/bin/fzf: binaries/${PLATFORM}/fzf/bin/fzf # fzf
+    ~/.local/bin/fzf-preview.sh: binaries/${PLATFORM}/fzf/bin/fzf-preview.sh # fzf
     "$XDG_STATE_HOME/bin/gitstatusd-linux-${PLATFORM}": binaries/${PLATFORM}/gitstatus/bin/gitstatusd-linux-${PLATFORM} # gitstatus
+    ~/.local/bin/rg: binaries/${PLATFORM}/ripgrep/bin/rg # ripgrep
+    ~/.local/bin/tldr: binaries/${PLATFORM}/tldr/bin/tldr # tldr
     ~/.local/bin/zellij: binaries/${PLATFORM}/zellij/bin/zellij # zellij
     ~/.local/bin/zoxide: binaries/${PLATFORM}/zoxide/bin/zoxide # zoxide
-    "$XDG_DATA_HOME/zsh/size-functions/_bat": binaries/${PLATFORM}/bat/share/autocomplete/bat.zsh # bat
+    "$XDG_DATA_HOME/zsh/site-functions/_bat": binaries/${PLATFORM}/bat/share/autocomplete/bat.zsh # bat
     "$XDG_DATA_HOME/zsh/site-functions/_eza": binaries/${PLATFORM}/eza/share/_eza # eza
+    "$XDG_DATA_HOME/zsh/site-functions/_delta": binaries/${PLATFORM}/delta/share/completion.zsh # delta
     "$XDG_DATA_HOME/zsh/site-functions/_dust": binaries/${PLATFORM}/dust/share/_dust # dust
     "$XDG_DATA_HOME/zsh/site-functions/_fastfetch": binaries/${PLATFORM}/fastfetch/share/zsh/site-functions/_fastfetch # fastfetch
     "$XDG_DATA_HOME/zsh/site-functions/_fd": binaries/${PLATFORM}/fd/share/autocomplete/_fd # fd
+    "$XDG_DATA_HOME/zsh/site-functions/_rg": binaries/${PLATFORM}/ripgrep/share/complete/_rg # ripgrep
+    "$XDG_DATA_HOME/zsh/site-functions/_tldr": binaries/${PLATFORM}/tldr/share/completions/_tldr # ripgrep
     "$XDG_DATA_HOME/zsh/site-functions/_zellij": binaries/${PLATFORM}/zellij/share/_zellij # zellij
     "$XDG_DATA_HOME/zsh/site-functions/_zoxide": binaries/${PLATFORM}/zoxide/share/completions/_zoxide # zoxide
