--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -30,11 +30,12 @@
 
 - link:
     "$XDG_CONFIG_HOME/fzf/.fzfrc": fzf/.fzfrc # fzf
+    "$XDG_CONFIG_HOME/git/config": git/config # git
     "$XDG_CONFIG_HOME/p10k/.p10krc": p10k/.p10krc # p10k
     "$XDG_CONFIG_HOME/p10k/p10k.zsh": p10k/p10k.zsh # p10k
-    "$XDG_CONFIG_HOME/vim/.vimrc": vim/.vimrc # vim
-    "$XDG_CONFIG_HOME/zellij/config.kdl": zellij/config.kdl # zellij
-    "$XDG_DATA_HOME/zinit/": zinit # zinit
+    "$XDG_CONFIG_HOME/vim/vimrc": vim/vimrc # vim
+    "$XDG_CONFIG_HOME/zellij": zellij # zellij
+    "$XDG_DATA_HOME/zinit": zinit # zinit
     "$HOME/.zshenv": zsh/.zshenv # zsh
     "$XDG_CONFIG_HOME/zsh/.zshrc": zsh/.zshrc # zsh
 
