--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -33,8 +33,11 @@
     "$XDG_CONFIG_HOME/git/config": git/config # git
     "$XDG_CONFIG_HOME/p10k/.p10krc": p10k/.p10krc # p10k
     "$XDG_CONFIG_HOME/p10k/p10k.zsh": p10k/p10k.zsh # p10k
+    "$XDG_CONFIG_HOME/tldr/config.toml": tldr/config.toml # tldr
+    "$XDG_CONFIG_HOME/tldr/.tldrc": tldr/.tldrc # tldr
     "$XDG_CONFIG_HOME/vim/vimrc": vim/vimrc # vim
     "$XDG_CONFIG_HOME/zellij": zellij # zellij
+    "$XDG_DATA_HOME/ctldr": tldr/ctldr # tldr
     "$XDG_DATA_HOME/zinit": zinit # zinit
     "$HOME/.zshenv": zsh/.zshenv # zsh
     "$XDG_CONFIG_HOME/zsh/.zshrc": zsh/.zshrc # zsh
