--- a/fzf/.fzfrc
+++ b/fzf/.fzfrc
@@ -91,6 +91,7 @@ export _ZO_ECHO=1
 export _ZO_DATA_DIR="$XDG_DATA_HOME/zoxide"
 export _ZO_FZF_OPTS="
   $FZF_DEFAULT_OPTS
+  --no-sort
   --preview-window right
   --bind 'focus:transform-header:true'
   --border-label ' Zoxide. A smarter cd command. '
