add bin: grex sd choose hyperfine

--- a/install.bin.mac.yaml
+++ b/install.bin.mac.yaml
@@ -9,14 +9,18 @@
 - brew:
   - bat
   - btop
+  - choose-rust
   - git-delta
   - dust
   - eza
   - fastfetch
   - fd
   - fzf
+  - hyperfine
+  - grex
   - pueue
   - ripgrep
+  - sd
   - tlrc
   - zellij
   - zoxide
